--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
